--- a/_includes/widgets/profile_card.html
+++ b/_includes/widgets/profile_card.html
@@ -43,6 +43,9 @@
                         {% if site.data.profile.cv_link %}
                             <a target="_blank" href="{{ site.data.profile.cv_link | relative_url }}"><i class="fas fa-file-alt"></i> Curriculum Vitae</a> <br/>
                         {% endif %}
+                        {% if site.data.profile.res_link %}
+                            <a target="_blank" href="{{ site.data.profile.res_link | relative_url }}"><i class="fas fa-file-alt"></i> Resume</a> <br/>
+                        {% endif %}
                     </div>
         
                 </div>
